fix: stamp overlapped training banner

--- a/cdn/dev/css/index.css
+++ b/cdn/dev/css/index.css
@@ -590,7 +590,7 @@
 		margin-top: 30px;
 	}
 	#main-banner{
-		top: 230px;	
+		top: 170px;	
 	}
 	.section-testimonials{
 		width: 700px;
